force-app/main/default/objects/Search_Component_Configuration__mdt/Search_Component_Configuration__mdt.object-meta.xml
<CustomObject>
    <description>Captures configuration settings for uses of Search and Match Components, such as table columns, filters and row-level actions</description>
    <label>Search Component Configuration</label>
    <pluralLabel>Search Component Configurations</pluralLabel>
</CustomObject>