force-app/main/default/objects/Search_Component_Configuration__mdt/fields/Baseline_Fields__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Fields__c</fullName>
    <label>Baseline Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>