force-app/main/default/objects/Search_Component_Configuration__mdt/fields/Baseline_Filters__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Filters__c</fullName>
    <label>Baseline Filters</label>
    <type>TextArea</type>
</CustomField>